2007-05-13  Paul J Stevens <paul@nfg.nl>

	* misc.c:
	only iconv_strdup non-utf8 values from database
	* check_dbmail_misc.c, dbmail-message.c, dbmail-message.h, misc.c, 
	misc.h, test-scripts:
	cleanup the convert_8bit functions
	* dbmail-imapsession.c, imapcommands.c, test-scripts:
	be more careful about re-opening mailbox during sessions

2007-05-12  Paul Stevens <paul@nfg.nl>

	* Makefile.in:
	autotools update
	* Makefile.am, db.c, dbmail-imapsession.c, dbmail-mailbox.c, 
	dbmailtypes.h, dm_imaputil.c, dm_imaputil.h, export.c, imap4.c, 
	modules:
	add message selection using IMAP SEARCH syntax and stdout output to 
	export
	* dbmail-imapsession.c:
	fix typo
	* ChangeLog, dbmail-imapsession.c:
	send EXISTS response when message count stays the same (bug #591)

2007-05-12  Aaron Stone  <aaron@serendipity.cx>

	* pop3d.c, pop3.c, imapd.c, server.c, serverchild.c, dbmailtypes.h,
	lmtpd.c, lmtp.c, timsieved.c, timsieve.c, dbmail-imapsession.c:
	Changes to timeout handling (closes bug #517)
	* export.c:
	Added -d command line option to delete messages after they have been
	exported (closes bug #380)
	* man/dbmail-export.txt man/dbmail-conf.txt man/footer.txt:
	Added documentation for the encoding options in dbmail.conf, for the
	new command line options in dbmail-export, and changed my title.

2007-05-11  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-imapsession.c:
	Set IMAP args array members to NULL after freeing them (closes bug
	#590)
	* dbmail-message.c:
	Remove setvbuf call (closes bug #587)

2007-05-10  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-imapsession.c:
	Changed exists and recent to be unsigned integers, as they are
	elsewhere (closes bug #586)

2007-05-10  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	always send EXISTS response during status update
	* AUTHORS, ChangeLog, dbmail-imapsession.c, dbmail-mailbox.c, 
	test-scripts:
	minor cleanups
	* dbmailtypes.h:
	define u64_t guint64

2007-05-10  Paul Stevens <paul@nfg.nl>
